add pipline.groovy